--- a/.travis.yaml
+++ b/.travis.yaml
@@ -1,11 +1,7 @@
-language : python
-
+language: python
+os: osx
 python:
-	- 2.7
-	- 3.6
-
+	- "2.7"
+	- "3.6"
 script:
 	- python hello.py
-
-after_success:
-	- codecov
