--- a/.travis.yaml
+++ b/.travis.yaml
@@ -1,6 +1,5 @@
-language: python
-python:
-	- "2.7"
-	- "3.6"
-script:
-	- python hello.py
+language: shell
+os: osx
+python: 3.6
+install: pip3 install --upgrade pip
+script: python3 hello.py
